CSS and home page added

--- a/dating-app/html/home.html
+++ b/dating-app/html/home.html
@@ -6,36 +6,39 @@
     <title>Document</title>
 
     <!-- css -->
-    <link rel="stylesheet" href="/dating-app/css/login.scss">
+    <link rel="stylesheet" href="/dating-app/css/login.css">
 
     <!-- poppins font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    link
 </head>
 <body>
     <!-- NAV -->
     <section class="nav" id="nav">
         <div class="nav__container" id="nav-container">
-            <div class="logo">
-                <h1 class="logo">Subtle Asian Dating</h1>
+            <div class="logo__container">
+                <a class="logo">Subtle Asian Dating</a>
             </div>
 
             <nav class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link"></a></li>
-                    <li class="nav__item"><a href="#" class="nav__link"></a></li>
-                    <li class="nav__item"><a href="#" class="nav__link"></a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Register</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Logout</a></li>
                 </ul>
             </nav>
-            
-            <div class="register__menu" id="register-menu">
-                <div class="register">
-                    <a href="#" class="register__link">Register</a>
-                </div>
-                <div class="login">
-                    <a href="#" class="login__link">Login</a>
-                </div>
+        </div>
+    </section>
+    <section class="hero-home">
+        <div class="hero__container-home">
+            <img class="fitBg-home" src="/dating-app/img/hero.jpg" alt="">
+            <div class="message__container-home" id="message__container">
+                <h1 class="message__title-home">Welcome to Subtle Asian Dating Live</h1>
+                <span class="message__intro-home">Meet your future love by a click of a button</span>
+                <button class="message__start-home">Start now</button>
             </div>
         </div>
     </section>
