--- a/dating-app/html/home.html
+++ b/dating-app/html/home.html
@@ -22,7 +22,7 @@
 
             <nav class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="/dating-app/html/home.html" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
