--- a/dating-app/html/home.html
+++ b/dating-app/html/home.html
@@ -42,5 +42,29 @@
             </div>
         </div>
     </section>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyCZ88aRbgxvHdloRH80Ql8xWYbB0dcgNfE",
+    authDomain: "subtle-asian-dating-75cae.firebaseapp.com",
+    projectId: "subtle-asian-dating-75cae",
+    storageBucket: "subtle-asian-dating-75cae.appspot.com",
+    messagingSenderId: "770052564491",
+    appId: "1:770052564491:web:a5d9619fc835449f91090e",
+    measurementId: "G-TZLMQN4ME8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
